@@ -177,19 +177,27 @@ function get_update_doll_script($pmasterid, $dollid, $key, $value=''){
 return $script;
 }
 
-function make_refresh_menu($pmid,$dollid,$cur_interval,$params=null,&$menu,&$submenu){
+function make_refresh_menu($pmid,$dollid,$cur_interval,$params=null,&$menu,&$submenu, $menu_type=1){
 
-	$menu['menu_'.$dollid][] = array(S_REFRESH, null, null, array('outer'=> array('pum_oheader'), 'inner'=>array('pum_iheader')));
-	$intervals = array('10','30','60','120','600','900');
+	if($menu_type == 1){
+		$intervals = array('10'=>10, '30'=>30, '60'=>60, '120'=>120, '600'=>600, '900'=>900);
+		$title = S_REFRESH_TIME_IN_SECONDS;
+	}
+	else if($menu_type == 2){
+		$intervals = array('x0.25'=>0.25, 'x0.5'=>0.5, 'x1'=>1, 'x1.5'=>1.5, 'x2'=>2, 'x3'=>3, 'x4'=>4, 'x5'=>5);
+		$title = S_REFRESH_TIME_MULTIPLIER;
+	}
+	
+	$menu['menu_'.$dollid][] = array($title, null, null, array('outer'=> array('pum_oheader'), 'inner'=>array('pum_iheader')));
 
 	foreach($intervals as $key => $value){
 		$menu['menu_'.$dollid][] = array(
-					S_EVERY.SPACE.$value.SPACE.S_SECONDS_SMALL,
-					'javascript: setRefreshRate('.zbx_jsvalue($pmid).','.zbx_jsvalue($dollid).','.$value.','.zbx_jsvalue($params).');'.
-					'void(0);',
-					null,
-					array('outer' => ($value == $cur_interval)?'pum_b_submenu':'pum_o_submenu', 'inner'=>array('pum_i_submenu')
-			));
+			$key,
+			'javascript: setRefreshRate('.zbx_jsvalue($pmid).','.zbx_jsvalue($dollid).','.$value.','.zbx_jsvalue($params).');'.
+			'void(0);',
+			null,
+			array('outer' => ($value == $cur_interval)?'pum_b_submenu':'pum_o_submenu', 'inner'=>array('pum_i_submenu')
+		));
 	}
 	$submenu['menu_'.$dollid][] = array();
 }
