@@ -232,6 +232,8 @@
 	'S_EXISTING'=>				'Existing',
 	'S_MISSING'=>				'Missing',
 	'S_REFRESH'=>				'Refresh',
+	'S_REFRESH_TIME_IN_SECONDS'=> 'Refresh time in seconds',
+	'S_REFRESH_TIME_MULTIPLIER' => 'Refresh time multiplier',
 	'S_IMPORTED'=>				'Imported',
 	'S_SUCCESSEFULLY_SMALL'=>		'successfully',
 	'S_FAILED_SMALL'=>			'failed',
@@ -2322,6 +2324,9 @@
 	'S_CANNOT_FIND_OBJECTS_WITH_NAME'=>	'Can not find objects with name',
 	'S_CANNOT_CREATE_NEW_ELEMENT'=>		'Can not create new element',
 	'S_OTHER_SMALL'=>			'other',
+
+// class.cookie.js
+	'S_MAX_COOKIE_SIZE_REACHED' => 'We are sorry, the maximum possible number of elements to remember has been reached.',
 
 );
 ?>
